# pointersay

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: global_info.rs  main.rs  popup.rs  window.rs
src/global_info/: wayland.rs  x11.rs
src/popup/: wayland.rs  x11.rs
