[package]
name = "pointersay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
gdk4-x11 = "0.7.2"
glib = "0.18.3"
gtk4 = "0.7.3"
gtk4-layer-shell = "0.2.0"
smithay-client-toolkit = "0.18.0"
wayland-client = "0.31.1"
x11rb = "0.12.0"
