[package]
name = "pointersay"
version = "0.1.0"
description = "Display text under the mouse pointer"
authors = ["plzfgme"]
edition = "2021"
license = "MIT"
repository = "https://github.com/plzfgme/pointersay"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
gdk4-x11 = "0.7.2"
glib = "0.18.3"
gtk4 = "0.7.3"
gtk4-layer-shell = "0.2.0"
smithay-client-toolkit = "0.18.0"
wayland-client = "0.31.1"
x11rb = "0.12.0"
